@@ -1,4 +1,4 @@
-/* PR c/14114 */
+/* PR debug/14114 */
 /* Origin: <snyder@fnal.gov> */
 /* { dg-do compile } */
 /* { dg-options "-O2 -g" } */
@@ -10,7 +10,7 @@ void a()
 {
   void c();
   c();
-} /* { dg-bogus "error" "PR c/14114" { xfail *-*-* } } */
+}
 
 void b()
 {
