@@ -1,3 +1,7 @@
+2004-03-06  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* gcc.dg/decl-5.c: New test.
+
 2004-03-05  Roger Sayle  <roger@eyesopen.com>
 
 	PR middle-end/14203
